--- a/src/styles/storeMenu.css
+++ b/src/styles/storeMenu.css
@@ -15,6 +15,7 @@
   left: 0;
   opacity: 1;
   pointer-events: all;
+  z-index: 3000;
 }
 
 .sidebar-buttons {
